Fixed footer alignment

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -164,6 +164,7 @@ h1{
 }
 
     .legal-license {
+        margin: auto;
         margin-top: 0;
     }
     .legal-links {
